2007-05-30  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/start.xul: Make cmd_minimizeWindow call
	_focusedFrame.minimize().

	* compzilla/chrome/content/frame.js: Fix hide() by setting
	style.display="none".

2007-05-30  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/overlay.js: use $().

	* compzilla/chrome/content/debug.js: use $().

	* compzilla/chrome/content/frame.js: use $() instead of both
	document.getElementById and getDescendentById.  also, use
	jquery.Extend instead of the loop that adds methods.

	* compzilla/chrome/content/content.js: use $(), and jquery's clone
	method, and use jQuery.extend instead of the loop adding methods.
	Also remove the c&p extra field in _NET_WM_ICON_GEOMETRY's value.

	* compzilla/chrome/content/start.js: fix typo with
	DeleteRootWindowProperty method name, and use $().

	* compzilla/chrome/content/frame.js: get rid of getElementById

	* compzilla/chrome/content/windowStack.js: change the sense of
	some if's so that we return in the then block.  saves us
	indendation levels.  also use $().

	* compzilla/chrome/content/scale.js: call ondestroy instead of
	destroy.  fixes js error. use $().

	* compzilla/chrome/content/windowStack.js: constrain the
	_NET_SHOWING_DESKTOP property to 1 or 0, not whatever javascript
	maps true/false to.

2007-05-29  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/windowStack.js: add back in the
	toggleDesktop method (it's used in start.xul), but have it just
	set/get showingDesktop.  make the setter for showingDesktop update
	the root window property.  use _addUtilMethods(windowStack) to get
	us windowStack.addProperty, to clean up the showingDesktop
	property.  Also, make the moveToBottom code a little better -
	don't always restack.  we don't start allocating Z indices from
	the bottom, but from 1/3rd of the way between bottom and top.  so
	we can use the same maybeRestack logic in moveToBottom as
	moveToTop.
